--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.jpa.database=postgresql
 
 # payme
 paycom.user.name=Paycom
-paycom.user.password=Mzew00@&D#kNVhFzK&IIqzy5Fh&n&dGQ4V%1
+paycom.user.password=cash-key
